--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,4 +35,15 @@
             android:background="#F9F9F9"
             android:textAllCaps="false"
             android:layout_margin="16dp"/>
+
+
+    <Button
+        android:id="@+id/btnOverlay"
+        android:text="Overlay view example"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#F9F9F9"
+        android:textAllCaps="false"
+        android:layout_margin="16dp"/>
+
 </LinearLayout>
